[gd_scene load_steps=3 format=3 uid="uid://csq85o7bk7rs1"]

[ext_resource type="Script" path="res://interfaces/user_interfaces/start_menu.gd" id="1_a1ikn"]
[ext_resource type="PackedScene" uid="uid://bnabgu0s2d4da" path="res://interfaces/blank.tscn" id="2_qk5ja"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1ikn")

[node name="HUD" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="HUD"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "TEXT_GAME_NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
layout_mode = 2
size_flags_vertical = 3

[node name="basic" type="VBoxContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="start" type="Button" parent="HUD/HBoxContainer/basic"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_START_GAME"

[node name="settings" type="Button" parent="HUD/HBoxContainer/basic"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_SETTINGS"

[node name="more" type="Button" parent="HUD/HBoxContainer/basic"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_MORE"

[node name="quit" type="Button" parent="HUD/HBoxContainer/basic"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_QUIT_GAME"

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="start_game" type="VBoxContainer" parent="HUD/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="new" type="Button" parent="HUD/HBoxContainer/HBoxContainer/start_game"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_NEW_GAME"

[node name="load" type="Button" parent="HUD/HBoxContainer/HBoxContainer/start_game"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_LOAD_GAME"

[node name="Blank" parent="HUD/HBoxContainer/HBoxContainer/start_game" instance=ExtResource("2_qk5ja")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="more" type="VBoxContainer" parent="HUD/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="mods" type="Button" parent="HUD/HBoxContainer/HBoxContainer/more"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_MODS"

[node name="help" type="Button" parent="HUD/HBoxContainer/HBoxContainer/more"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_HELP"

[node name="about" type="Button" parent="HUD/HBoxContainer/HBoxContainer/more"]
layout_mode = 2
size_flags_vertical = 3
text = "TEXT_ABOUT"

[node name="Blank" parent="HUD/HBoxContainer/HBoxContainer/more" instance=ExtResource("2_qk5ja")]
layout_mode = 2
size_flags_vertical = 3

[node name="Blank" parent="HUD/HBoxContainer/HBoxContainer" instance=ExtResource("2_qk5ja")]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HUD/HBoxContainer/basic/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/basic/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/basic/more" to="." method="_on_more_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/basic/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/HBoxContainer/start_game/new" to="." method="_on_new_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/HBoxContainer/start_game/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/HBoxContainer/more/mods" to="." method="_on_mods_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/HBoxContainer/more/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="HUD/HBoxContainer/HBoxContainer/more/about" to="." method="_on_about_pressed"]
